--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -1,64 +1,104 @@
 // stylelint-disable selector-no-qualifying-type
 @if $enable-btn {
     // Base button
-    @if $enable-btn-common {
-        .btn {
-            display: inline-block;
-            font-weight: $btn-font-weight;
-            line-height: $btn-line-height;
-            text-align: center;
-            text-decoration: none;
-            vertical-align: middle;
-            user-select: none;
-            border: $btn-border-width solid transparent;
-            @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-line-height, $btn-border-radius);
-            @include box-shadow($btn-box-shadow);
-            @include transition($btn-transition);
-        }
+    .btn {
+        display: inline-block;
+        font-weight: $btn-font-weight;
+        line-height: $btn-line-height;
+        text-align: center;
+        text-decoration: none;
+        vertical-align: middle;
+        user-select: none;
+        border: $btn-border-width solid transparent;
+        @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-line-height, $btn-border-radius);
+        @include box-shadow($btn-box-shadow);
+        @include transition($btn-transition);
+    }
 
-        .btn:hover {
-            text-decoration: none;
-        }
+    .btn:hover {
+        text-decoration: none;
+    }
 
-        .btn:focus,
+    %btn-common-focus {
+        text-decoration: none;
+        // Turn off outline due to focus box-shadow set by button-variant()
+        outline: 0;
+    }
+    .btn:focus {
+        @extend %btn-common-focus;
+    }
+    @if $enable-btn-check {
         .btn-check-input:focus ~ .btn {
-            text-decoration: none;
-            // Turn off outline due to focus box-shadow set by button-variant()
-            outline: 0;
+            @extend %btn-common-focus;
         }
+    }
 
-        // Disabled comes first so active can restyle
-        .btn.disabled,
-        .btn:disabled,
+    // Disabled comes first so active can restyle
+    %btn-common-disabled {
+        opacity: $btn-disabled-opacity;
+        @include box-shadow(none);
+    }
+    .btn.disabled,
+    .btn:disabled {
+        @extend %btn-common-disabled;
+    }
+    @if $enable-btn-check {
         .btn-check-input:disabled ~ .btn {
-            opacity: $btn-disabled-opacity;
-            @include box-shadow(none);
+            @extend %btn-common-disabled;
         }
+    }
 
-        .btn:not(:disabled):not(.disabled) {
-            cursor: pointer;
+    .btn:not(:disabled):not(.disabled) {
+        cursor: pointer;
+    }
+
+    %btn-common-active {
+        @include box-shadow($btn-active-box-shadow);
+    }
+    .btn:not(:disabled):not(.disabled):active,
+    .btn:not(:disabled):not(.disabled).active,
+    .open > .btn {
+        @if $enable-shadows {
+            @extend %btn-common-active;
         }
-
-        .btn:not(:disabled):not(.disabled):active,
-        .btn:not(:disabled):not(.disabled).active,
-        .btn-check-input:not(:disabled):checked ~ .btn,
-        .open > .btn {
-            @include box-shadow($btn-active-box-shadow);
+    }
+    @if $enable-btn-check {
+        .btn-check-input:not(:disabled):checked ~ .btn {
+            @if $enable-shadows {
+                @extend %btn-common-active;
+            }
         }
+    }
 
-        .btn:not(:disabled):not(.disabled):active:focus,
-        .btn:not(:disabled):not(.disabled).active:focus,
-        .btn-check-input:not(:disabled):checked:focus ~ .btn,
-        .open > .btn:focus {
-            @include box-shadow($btn-active-box-shadow, $btn-focus-box-shadow);
+    %btn-common-active-focus {
+        @include box-shadow($btn-active-box-shadow, $btn-focus-box-shadow);
+    }
+    .btn:not(:disabled):not(.disabled):active:focus,
+    .btn:not(:disabled):not(.disabled).active:focus,
+    .open > .btn:focus {
+        @if $enable-shadows {
+            @extend %btn-common-active-focus;
         }
+    }
+    @if $enable-btn-check {
+        .btn-check-input:not(:disabled):checked:focus ~ .btn {
+            @if $enable-shadows {
+                @extend %btn-common-active-focus;
+            }
+        }
+    }
 
-
-        // Future-proof disabling of clicks on `<a>` elements
-        a.btn.disabled,
-        fieldset:disabled a.btn,
+    // Future-proof disabling of clicks on `<a>` elements
+    %btn-common-disabled-pointer {
+        pointer-events: none;
+    }
+    a.btn.disabled,
+    fieldset:disabled a.btn {
+        @extend %btn-common-disabled-pointer;
+    }
+    @if $enable-btn-check {
         .btn-check-input:disabled ~ .btn {
-            pointer-events: none;
+            @extend %btn-common-disabled-pointer;
         }
     }
 
@@ -177,12 +217,12 @@
             }
 
             .btn-#{$size} {
-                @if $enable-btn-sizes {
+                @if $enable-btn-sizing {
                     @extend %btn-#{$size};
                 }
 
                 &.btn-icon {
-                    @if $enable-btn-icon and $enable-btn-icon-sizes {
+                    @if $enable-btn-icon and $enable-btn-icon-sizing {
                         @extend %btn-icon-#{$size};
                     }
                 }
@@ -216,7 +256,7 @@
     @if $enable-btn-check {
         .btn-check {
             position: relative;
-            display: inline-block;
+            display: inline-flex;
             vertical-align: middle;
         }
 
