Fix naming to `.jumbotron-fluid`

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -8,7 +8,7 @@
 
     {% include nav-main.html %}
 
-    <div class="jumbotron jumbotron-full jumbotron-docs">
+    <div class="jumbotron jumbotron-fluid jumbotron-docs">
         <div class="container-fluid">
             {% include page-header.html %}
         </div>
