--- a/scss/component/_tooltip.scss
+++ b/scss/component/_tooltip.scss
@@ -4,7 +4,7 @@
     display: block;
     // Our parent element can be arbitrary since tooltips are by default inserted as a sibling of their target element.
     // So reset our font and text properties to avoid inheriting weird values.
-    @include reset-text;
+    @include reset-text();
     @include font-size($tooltip-font-size);
     // Allow breaking very long words so they don't overflow the tooltip's bounds
     word-wrap: break-word;
@@ -74,7 +74,7 @@
         opacity: $tooltip-close-opacity;
 
         &:not(:disabled):not(.disabled) {
-            @include hover-focus {
+            @include hover-focus() {
                 color: $tooltip-close-hover-color;
                 opacity: $tooltip-close-hover-opacity;
             }
