--- a/scss/core/_typography.scss
+++ b/scss/core/_typography.scss
@@ -64,7 +64,7 @@
     // Lists
     @if $enable-typography-list-unstyled {
         .list-unstyled {
-            @include list-unstyled;
+            @include list-unstyled();
         }
     }
 
