--- a/scss/component/_badge.scss
+++ b/scss/component/_badge.scss
@@ -20,7 +20,7 @@
 
         // Add hover effects, but only for links
         @at-root a#{&} {
-            @include hover-focus {
+            @include hover-focus() {
                 text-decoration: none;
             }
         }
