--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -9,7 +9,7 @@
     &:not(:disabled):not(.disabled) {
         cursor: pointer;
 
-        @include hover-focus {
+        @include hover-focus() {
             color: inherit;
             text-decoration: none;
             opacity: $close-hover-opacity;
