--- a/scss/component/_drag.scss
+++ b/scss/component/_drag.scss
@@ -10,7 +10,7 @@
     &:not(:disabled):not(.disabled) {
         cursor: move;
 
-        @include hover-focus {
+        @include hover-focus() {
             color: inherit;
             text-decoration: none;
             opacity: $drag-hover-opacity;
