--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -138,7 +138,7 @@
         background-color: $dropdown-link-active-bg;
     }
 
-    @include hover-focus {
+    @include hover-focus() {
         color: $dropdown-link-hover-color;
         text-decoration: none;
         background-color: $dropdown-link-hover-bg;
