--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -7,7 +7,7 @@
         flex-direction: column;
         min-width: 0;
         margin-bottom: $list-margin-bottom;
-        @include list-unstyled;
+        @include list-unstyled();
 
         .list {
             padding: 0;
@@ -319,7 +319,7 @@
             text-decoration: none;
 
             // Hover state
-            @include hover-focus {
+            @include hover-focus() {
                 z-index: 2;
                 color: $list-item-action-hover-color;
                 text-decoration: none;
