--- a/scss/component/_nav.scss
+++ b/scss/component/_nav.scss
@@ -39,7 +39,7 @@
                 border: $nav-tabs-border-width solid transparent;
                 @include border-radius($border-radius $border-radius 0 0);
 
-                @include hover-focus {
+                @include hover-focus() {
                     text-decoration: none;
                     background-color: $nav-tabs-hover-bg;
                     border-color: $nav-tabs-hover-border-color $nav-tabs-hover-border-color $nav-tabs-border-color;
@@ -80,7 +80,7 @@
                 text-decoration: none;
                 @include border-radius($nav-pills-border-radius);
 
-                @include hover-focus {
+                @include hover-focus() {
                     color: inherit;
                     text-decoration: none;
                     background-color: $nav-pills-hover-bg;
