--- a/scss/component/_popover.scss
+++ b/scss/component/_popover.scss
@@ -5,7 +5,7 @@
     max-width: $popover-max-width;
     // Our parent element can be arbitrary since popovers are by default inserted as a sibling of their target element.
     // So reset our font and text properties to avoid inheriting weird values.
-    @include reset-text;
+    @include reset-text();
     @include font-size($popover-font-size);
     // Allow breaking very long words so they don't overflow the popover's bounds
     word-wrap: break-word;
