--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -152,7 +152,7 @@
             border-color: transparent;
             box-shadow: none;
 
-            @include hover-focus {
+            @include hover-focus() {
                 text-decoration: $link-hover-decoration;
                 background-color: transparent;
                 border-color: transparent;
