--- a/scss/mixins/_alert.scss
+++ b/scss/mixins/_alert.scss
@@ -14,7 +14,7 @@
         .alert-link {
             color: $color;
 
-            @include hover-focus {
+            @include hover-focus() {
                 color: $hover-color;
             }
         }
