--- a/scss/mixins/_badge.scss
+++ b/scss/mixins/_badge.scss
@@ -5,7 +5,7 @@
     border-color: $border;
 
     @at-root a#{&} {
-        @include hover-focus {
+        @include hover-focus() {
             color: $hover-color;
             background-color: $hover-bg;
             border-color: $hover-border;
