Disable pointer events on dropdown and list items

--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -149,6 +149,7 @@
     &:disabled {
         color: $dropdown-link-disabled-color;
         text-decoration: none;
+        pointer-events: none;
         background-color: $dropdown-link-disabled-bg;
         background-image: none; // Remove CSS gradient
     }
