--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -252,7 +252,7 @@ $docs-color: #246;
 .anchorjs-link {
     transition: opacity .2s ease-in-out .1s;
 
-    @include hover-focus {
+    @include hover-focus() {
         color: inherit;
         text-decoration: none;
     }
