--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -242,6 +242,7 @@
             height: $input-height-outer;
             padding: $input-padding-y calc(#{$input-padding-x} + #{$custom-select-indicator-width} + #{$custom-select-indicator-offset}) $input-padding-y $input-padding-x;
             @include font-size($input-font-size);
+            font-weight: $input-font-weight;
             line-height: $input-line-height;
             color: $input-color;
             vertical-align: middle;
@@ -377,6 +378,7 @@
             padding: $input-padding-y $input-padding-x;
             overflow: hidden;
             @include font-size($input-font-size);
+            font-weight: $input-font-weight;
             line-height: $input-line-height;
             color: $input-color;
             background-color: $input-bg;
