--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -15,6 +15,7 @@ $input-height-outer:    calc(#{$input-height-inner} + #{($input-border-width * 2
             height: $input-height-outer;
             padding: $input-padding-y $input-padding-x;
             @include font-size($input-font-size);
+            font-weight: $input-font-weight;
             line-height: $input-line-height;
             color: $input-color;
             background-color: $input-bg;
@@ -108,6 +109,7 @@ $input-height-outer:    calc(#{$input-height-inner} + #{($input-border-width * 2
             padding-bottom: calc(#{$input-padding-y} + #{$input-border-width});
             margin-bottom: 0; // Override the `<label>/<legend>` default
             font-size: inherit; // Override the `<legend>` default
+            font-weight: $input-label-font-weight;
             line-height: $input-line-height;
         }
     }
